test/bad/doublenot_elim_isnt.pa
lemma bad : 0 = S(0) {
    forall x, ~(0 = S(x)) by zero_is_not_succ;
    ~(0 = S(0)) by all_elim 0;
    0 = S(0) by not_not_elim 1;
}

